--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -247,6 +247,7 @@ add_library(server
 	bloom.cpp
 	blockencodings.cpp
 	blockfilter.cpp
+	blockworks.cpp
 	chain.cpp
 	checkpoints.cpp
 	config.cpp
